--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
 
     <main>
-    	<section class="info_section"><p>Online tool to visualize tandem repeats that produces plots such as those shown below. Requires a fasta with sequences closely trimmed around the repeat region.</p></section>
+    	<section class="info_section"><p>Online tool to visualize tandem repeats that produces plots such as those shown below. Requires a fasta with sequences in the repeat region, reverse complemented if necessary to match the repeat pattern.</p></section>
         <form id="inputForm" action="submit_form.php" method="post">
             <fieldset>
                 <legend>Basic Parameters</legend>
