VNTRs not supported yet

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <label for="repeat_type">Repeat Type:</label>
                 <select id="repeat_type" name="repeat_type">
                     <option value="simple_repeat">Simple Repeat</option>
-                    <option value="vntr">VNTR</option>
+                    <!--<option value="vntr">VNTR</option>-->
                 </select>
 
                 <label for="main_repeat_unit" id="main_repeat_unit_label">Main Repeat Unit:</label>
